# mars

./: .envrc  .gitignore  Cargo.toml  LICENSE.txt  README.md  aarch64.lds  flake.nix  linker.lds  ovmf.nix
.cargo/: config.toml
.why3find/: version
bootloader/: Cargo.toml
bootloader/.zed/: settings.json
bootloader/src/: allocator.rs  elf.rs  main.rs  page.rs  vec.rs
gdb/: darwin-target-match.patch  debug-info-from-env.patch
getters/: Cargo.toml
kernel/: Cargo.toml  build.rs
kernel/.zed/: settings.json
kernel/drivers/acpi/: Cargo.toml  proofs
kernel/drivers/acpi/src/: lib.rs
kernel/drivers/acpi/src/acpi/: fadt.rs  gtdt.rs  header.rs  madt.rs  mcfg.rs  mod.rs  spcr.rs  xsdp.rs
kernel/drivers/generic-timer/: Cargo.toml
kernel/drivers/generic-timer/src/: lib.rs  timer.rs
kernel/src/: interrupt.rs  log.rs  lut.rs  main.rs
kernel/src/acpi/: mod.rs
kernel/src/allocator/: mod.rs
kernel/src/earlyinit/: acpi.rs  earlycon.rs  exception.rs  gicv3.rs  idle.rs  mem.rs  mmu.rs  mod.rs  platform.rs  smp.rs
klib/: Cargo.toml
klib/.zed/: settings.json
klib/getters/: Cargo.toml
klib/getters/src/: lib.rs
klib/models/: Cargo.toml  proofs
klib/models/src/: lib.rs
klib/models/src/memory/: addr.rs  mod.rs  registers.rs
klib/models/src/memory/registers/: field.rs  mod.rs  volatile.rs
klib/models/zerocopy/: Cargo.toml
klib/models/zerocopy-derive/: Cargo.toml
klib/models/zerocopy-derive/src/: lib.rs
klib/models/zerocopy/src/: dummy.rs  lib.rs
klib/models/zerocopy/src/shim/: error.rs  mod.rs
klib/src/: cache.rs  context.rs  cpu_interface.rs  exception.rs  fdt.rs  guard.rs  hash_map.rs  lib.rs  process.rs  scheduler.rs  smccc.rs  stack.rs  strange.rs  sync.rs  thread.rs  timer.rs  vcpu.rs  vec.rs
klib/src/acpi/: fadt.rs  gtdt.rs  header.rs  madt.rs  mcfg.rs  mod.rs  rsdp.rs  spcr.rs  xsdp.rs
klib/src/hardware/: device.rs  driver.rs  irq.rs  mod.rs  resource.rs
klib/src/interrupt/: cpu_interface.rs  gicv3.rs  mod.rs
klib/src/interrupt/gicv3/: mod.rs
klib/src/interrupt/gicv3/registers/: gic.rs  icc_igrpen1_el1.rs  icc_pmr_el1.rs  icc_sre_el1.rs  mod.rs
klib/src/per_cpu/: mod.rs
klib/src/pm/: mod.rs
klib/src/pm/page/: mapper.rs  mod.rs  table_allocator.rs
klib/src/vfs/: file.rs  inode.rs  mod.rs
klib/src/vm/: backing.rs  map.rs  mod.rs  page.rs  page_allocator.rs  region.rs  slab.rs
klib/src/vm/page/: mod.rs  table_allocator.rs
klib/src/vm/user/: address_space.rs  allocator.rs  cursor.rs  mod.rs
mars_boot/: Cargo.toml
mars_boot/src/: main.rs
mars_bootloader/: Cargo.toml
mars_bootloader/src/: main.rs  page.rs
mars_kernel/: Cargo.toml  build.rs  qemu-arm.sh
mars_kernel/.cargo/: config.toml
mars_kernel/src/: fdt.rs  lib.rs
mars_kernel/src/vm/: mod.rs  slab.rs
mars_klib/: Cargo.toml
mars_klib/src/: exception.rs
mars_klib/src/vm/: mod.rs  page.rs
mars_protocol/: Cargo.toml
mars_protocol/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
runner/: Cargo.toml
runner/src/: main.rs
target-specs/: aarch64-mars-none.json
