[workspace]
members = [ "mars_bootloader", "mars_kernel", "mars_klib", "mars_protocol", "runner" ]
resolver = "3"

[workspace.dependencies]
aarch64-cpu = "11.2.0"
aarch64-cpu-ext = "0.1.4"
tock-registers = "0.10.1"
spin = "0.10.0"
uefi = "0.36.1"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"
