[workspace]
members = [ "bootloader",
            "kernel",
            "kernel/drivers/acpi",
            "klib",
            "klib/models",
            "klib/models/zerocopy",
            "klib/models/zerocopy-derive",
            "klib/getters",
            "protocol",
            "runner"
]
resolver = "3"

[workspace.dependencies]
aarch64-cpu = "11.2.0"
aarch64-cpu-ext = "0.1.4"
tock-registers = "0.10.1"
zerocopy = "0.8.48"
zerocopy-derive = "0.8.48"
uefi-raw = "0.14.0"
uefi = { version = "0.37.0", default-features = false }
derivative = "2.2.0"
log = "0.4.29"
bitflags = "2.11.1"
hax-lib = { git = "https://github.com/cryspen/hax", version = "0.3.6" }

# self
mars_getters = { path = "./klib/getters" }
mars-models = { path = "./klib/models" }
mars-models-zerocopy = { path = "./klib/models/zerocopy" }
mars-models-zerocopy-derive = { path = "./klib/models/zerocopy-derive" }
klib = { path = "./klib" }
protocol = { path = "./protocol" }
mars-acpi-driver = { path = "./kernel/drivers/acpi" }

# procedural
syn = "2.0.117"
quote = "1.0.45"
proc-macro2 = "1.0.106"
paste = "1.0.15"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"
