cargo-features = [ "per-package-target" ]

[package]
name = "bootloader"
version = "0.0.1"
edition = "2024"
default-target = "aarch64-unknown-uefi"

[dependencies]
log = "0.4.29"
uefi = { version = "0.36.1", features = ["logger", "panic_handler", "alloc"] }
protocol = { path = "../protocol" }
klib = { path = "../klib" }

aarch64-cpu = { workspace = true }
aarch64-cpu-ext = { workspace = true }
tock-registers = { workspace = true }
bitflags = "2.10.0"
