cargo-features = [ "per-package-target" ]

[package]
name = "bootloader"
version = "0.0.1"
edition = "2024"
default-target = "aarch64-unknown-uefi"

[dependencies]
log.workspace = true
protocol.workspace = true
klib.workspace = true
uefi-raw.workspace = true
uefi = { workspace = true, features = ["logger", "panic_handler", "alloc"] }
aarch64-cpu.workspace = true
aarch64-cpu-ext.workspace = true
tock-registers.workspace = true
bitflags.workspace = true
