cargo-features = [ "per-package-target" ]

[package]
name = "kernel"
version = "0.0.1"
edition = "2024"
forced-target = "aarch64-unknown-none"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = "s"
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false

[dependencies]
aarch64-cpu = { workspace = true }
aarch64-cpu-ext = { workspace = true }
arm-pl011-uart = { version = "0.4.0", default-features = false }
spin = { workspace = true }
tock-registers = { workspace = true }
protocol = { path = "../protocol" }
klib = { path = "../klib" }
uefi = { version = "0.37.0", default-features = false }
log = "0.4.29"
