[package]
name = "klib"
version = "0.0.1"
edition = "2024"

[lib]
name = "klib"
plugin = false
crate-type = [ "rlib" ]

[dependencies]
aarch64-cpu.workspace = true
aarch64-cpu-ext.workspace = true
arm-pl011-uart = { version = "0.4.0", default-features = false }
tock-registers.workspace = true
mars_getters.workspace = true
uefi = { workspace = true, default-features = false }
uefi-raw.workspace = true
derivative = { workspace = true, features = ["use_core"] }
log.workspace = true

zerocopy = { workspace = true, package = "mars-models-zerocopy", features = ["derive"] }
