cargo-features = [ "per-package-target" ]

[package]
name = "mars_kernel"
version = "0.0.1"
edition = "2024"
forced-target = "aarch64-unknown-none"

[[bin]]
name = "mars_kernel"
path = "src/bin/main.rs"
test = false

[dependencies]
aarch64-cpu = { workspace = true }
aarch64-cpu-ext = { workspace = true }
arm-pl011-uart = { version = "0.4.0", default-features = false }
spin = { workspace = true }
tock-registers = { workspace = true }
mars_protocol = { path = "../mars_protocol" }
uefi = { workspace = true }
mars_klib = { path = "../mars_klib" }
