[package]
name = "mars-models"
version = "0.0.1"
edition = "2024"

[lib]
name = "mars_models"

[dependencies]
hax-lib.workspace = true
paste.workspace = true
mars-models-zerocopy = { workspace = true, features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)'] }
