[package]
name = "mars-acpi-driver"
version = "0.0.1"
edition = "2024"

[lib]
name = "mars_acpi_driver"
plugin = false

[dependencies]
klib.workspace = true
log.workspace = true
hax-lib.workspace = true
mars_getters.workspace = true
tock-registers.workspace = true
mars-models.workspace = true
mars-models-zerocopy = { workspace = true, features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)'] }
